force-app/main/default/objects/FEC_Address_Info__c/FEC_Address_Info__c.object-meta.xml
<CustomObject>
    <label>Address Info</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>