force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Address__c.field-meta.xml
<CustomField>
    <fullName>FEC_Address__c</fullName>
    <description>Địa chỉ</description>
    <label>Address</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>