force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Address_Type__c</fullName>
    <description>Loại địa chỉ</description>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current Address</fullName>
            </value>
            <value>
                <fullName>Office Address</fullName>
            </value>
            <value>
                <fullName>Permanent Address</fullName>
            </value>
            <value>
                <fullName>Temporary Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>