force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Building__c.field-meta.xml
<CustomField>
    <fullName>FEC_Building__c</fullName>
    <label>Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>