force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Address Info</relationshipLabel>
    <relationshipName>Address_Info</relationshipName>
    <type>Lookup</type>
</CustomField>