force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Country__c.field-meta.xml
<CustomField>
    <fullName>FEC_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>FEC_Country__c</referenceTo>
    <relationshipLabel>Address Info</relationshipLabel>
    <relationshipName>Address_Info</relationshipName>
    <type>Lookup</type>
</CustomField>