force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Country_Text__c.field-meta.xml
<CustomField>
    <fullName>FEC_Country_Text__c</fullName>
    <label>Country Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>