force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_District_Text__c.field-meta.xml
<CustomField>
    <fullName>FEC_District_Text__c</fullName>
    <label>District Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>