force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>FEC_Mailing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Địa chỉ giao phát</description>
    <label>Mailing Address</label>
    <type>Checkbox</type>
</CustomField>