force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Months__c.field-meta.xml
<CustomField>
    <fullName>FEC_Months__c</fullName>
    <label>Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>