force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Number__c</fullName>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>