force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Parent_Address__c.field-meta.xml
<CustomField>
    <fullName>FEC_Parent_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin Original Address được chỉnh sửa</description>
    <label>Parent Address</label>
    <referenceTo>FEC_Address_Info__c</referenceTo>
    <relationshipLabel>Address Info</relationshipLabel>
    <relationshipName>Address_Info</relationshipName>
    <type>Lookup</type>
</CustomField>