force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Property_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Property_Status__c</fullName>
    <label>Property Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>