force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Street__c.field-meta.xml
<CustomField>
    <fullName>FEC_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>