force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_Years__c.field-meta.xml
<CustomField>
    <fullName>FEC_Years__c</fullName>
    <label>Years</label>
    <length>255</length>
    <type>Text</type>
</CustomField>