force-app/main/default/objects/FEC_Address_Info__c/fields/FEC_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>FEC_ZipCode__c</fullName>
    <description>Mã bưu điện</description>
    <label>ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>